--- a/react-todolist/src/App.css
+++ b/react-todolist/src/App.css
@@ -26,40 +26,19 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
-.modal {
-    display: block; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+.text-lable{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.DatePickers-textField-99{
+  width: unset !important;
+}
+.MuiDialog-paper-34 {
+  width: 400px;
 }
 
-/* Modal Content */
-.modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-}
-
-/* The Close Button */
-.close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
+.list-item{
+  border-bottom: 1ex;
+  border-bottom-color: #222;
 }
